<resources>
    <string name="app_name">Planner App</string>

    <string name="task_planner">Task Planner</string>

    <!-- Placeholder -->
    <string name="placeholderText">This is some placeholder text</string>
    <string name="placeholderTextLong">
        Lea nushe ri Pishfa lehati Yelet kai shtnesa Valva safa luli\n
        Teetha lethghraloo Shale nekrahoo Omnefla hayo vivga Anni doeksi shnahalan\n
        Sho le thal hali Venio va hashalgha ulimishla Yele vlegha taiyelegfni\n
        Ploshlogu tettna Lehakra Mishan disheru Ttisa luvivra naa
    </string>
    <string name="placeholderTime">12:30am - 12:30pm</string>
    <string name="placeholderTimeShort">10:00am</string>
    <string name="placeholderDate">Mo | 29 May</string>
    <string name="placeholderDateLong">Monday October 5th</string>

    <!-- Labels -->
    <string name="label_task">Tap to enter a new task</string>
    <string name="label_popup_date">Chosen Date:</string>
    <string name="label_popup_time">Set Time:</string>
    <string name="label_popup_tag">Select Tag</string>
    <string name="label_edit_desc">Edit Task Description</string>

    <!-- Buttons -->
    <string name="btn_add_task">Add Task</string>
    <string name="btn_new_task">New Task</string>
    <string name="btn_select_all">Select All</string>
    <string name="btn_settings">Settings</string>
    <string name="btn_delete">Delete</string>

    <!-- Tags -->
    <string name="tag_titleMsg">Update Tag</string>
    <string name="tag_base">Untagged</string>
    <string name="tag_booking">Booking / Appointment</string>
    <string name="tag_event">Special Event</string>
    <string name="tag_buy">Buy</string>
    <string name="tag_todo">To Do</string>
</resources>
