<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryDark"
    android:padding="5dp">

    <TextView
        android:id="@+id/txtSetDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:drawableStart="@drawable/ic_date"
        android:drawableLeft="@drawable/ic_date"
        android:ems="8"
        android:gravity="center"
        android:paddingLeft="5dp"
        android:paddingTop="2dp"
        android:paddingRight="5dp"
        android:paddingBottom="2dp"
        android:text="@string/placeholderDate"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/txtSetTime"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtSetTime" />

    <TextView
        android:id="@+id/txtSetTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:background="@android:color/white"
        android:drawableStart="@drawable/ic_time"
        android:drawableLeft="@drawable/ic_time"
        android:drawablePadding="2dp"
        android:gravity="center"
        android:minEms="6"
        android:paddingLeft="5dp"
        android:paddingTop="2dp"
        android:paddingRight="5dp"
        android:paddingBottom="2dp"
        android:text="@string/placeholderTime"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/txtSetDate"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnSetTag"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:background="@android:color/white"
        android:padding="5dp"
        android:tint="#555656"
        app:layout_constraintBottom_toBottomOf="@+id/txtSetTime"
        app:layout_constraintStart_toEndOf="@+id/txtSetTime"
        app:layout_constraintTop_toTopOf="@+id/txtSetTime"
        app:srcCompat="@drawable/tag_base" />

    <ImageButton
        android:id="@+id/btnReset"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:background="@android:color/white"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/btnSetTag"
        app:layout_constraintStart_toEndOf="@+id/btnSetTag"
        app:layout_constraintTop_toTopOf="@+id/btnSetTag"
        app:srcCompat="@drawable/ic_reset_parameters" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/newTaskLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSetTime">

        <ToggleButton
            android:id="@+id/btnStar"
            android:layout_width="23dp"
            android:layout_height="30dp"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:background="@android:color/transparent"
            android:button="@drawable/ic_star_toggle"
            android:includeFontPadding="false"
            android:textOff=""
            android:textOn=""
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/txtTaskDesc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:background="@android:color/transparent"
            android:cursorVisible="true"
            android:hint="@string/label_task"
            android:inputType="textAutoCorrect|textMultiLine|textCapSentences"
            android:maxLines="3"
            android:scrollbars="vertical"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnNewTask"
            app:layout_constraintStart_toEndOf="@+id/btnStar"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btnNewTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:tint="#818181"
            app:layout_constraintBottom_toBottomOf="@+id/btnStar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btnStar"
            app:srcCompat="@drawable/ic_add_box" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>