<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryDark">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/addTaskParamsLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardBtnSetDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/txtSetDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/clickable_bg"
                android:drawableTop="@drawable/ic_date"
                android:ems="5"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/placeholderDate"
                android:textSize="12sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardBtnSetTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            app:layout_constraintStart_toEndOf="@+id/cardBtnSetDate"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/txtSetTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/clickable_bg"
                android:drawableTop="@drawable/ic_time"
                android:gravity="center"
                android:maxEms="9"
                android:minEms="5"
                android:padding="5dp"
                android:text="@string/placeholderTime"
                android:textSize="12sp" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardBtnSetTag"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            app:layout_constraintBottom_toBottomOf="@+id/cardBtnSetTime"
            app:layout_constraintStart_toEndOf="@+id/cardBtnSetTime"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/btnSetTag"
                style="@style/WhiteBGButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/clickable_bg"
                android:drawableTop="@drawable/tag_base"
                android:ems="4"
                android:padding="5dp"
                android:text="Tag"
                android:textCursorDrawable="@color/iconTint" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardBtnResetParams"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            app:layout_constraintStart_toEndOf="@+id/cardBtnSetTag"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/btnResetParams"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/clickable_bg"
                android:drawableTop="@drawable/ic_reset_parameters"
                android:ems="4"
                android:gravity="center"
                android:padding="5dp"
                android:text="Reset"
                android:textSize="12sp" />
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/addTaskDescLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addTaskParamsLayout">

        <ImageView
            android:id="@+id/addTaskDescBackground"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ToggleButton
            android:id="@+id/btnStar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:background="@android:color/transparent"
            android:button="@drawable/ic_star_toggle"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:textSize="0sp"
            app:layout_constraintBottom_toBottomOf="@+id/btnNewTask"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btnNewTask" />

        <EditText
            android:id="@+id/txtTaskDesc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:background="@null"
            android:cursorVisible="true"
            android:hint="@string/label_task"
            android:inputType="textAutoCorrect|textMultiLine|textCapSentences"
            android:maxLines="3"
            android:padding="5dp"
            android:scrollbars="vertical"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/addTaskDescBackground"
            app:layout_constraintEnd_toStartOf="@+id/btnNewTask"
            app:layout_constraintStart_toEndOf="@+id/btnStar"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btnNewTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:tint="#818181"
            app:layout_constraintBottom_toBottomOf="@+id/txtTaskDesc"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_add_box" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>