<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/titleLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/editableLayout"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/topBarTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="Edit Task"
            android:textColor="@color/colorForeground"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"></TextView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/editableLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/editTimeLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/labelEditTime"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:background="@color/colorPrimary"
                android:drawableStart="@drawable/ic_time"
                android:drawableLeft="@drawable/ic_time"
                android:drawablePadding="5dp"
                android:ems="5"
                android:gravity="left|center_vertical"
                android:padding="5dp"
                android:text="Time"
                android:textColor="@android:color/white"
                app:drawableTint="@android:color/white"
                app:layout_constraintBottom_toBottomOf="@+id/txtEditTime"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/txtEditTime" />

            <TextView
                android:id="@+id/txtEditTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:ems="5"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/placeholderTime"
                app:layout_constraintStart_toEndOf="@+id/labelEditTime"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/editDateLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@android:color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTagLayout">

            <TextView
                android:id="@+id/labelEditDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:drawableStart="@drawable/ic_date"
                android:drawableLeft="@drawable/ic_date"
                android:drawablePadding="5dp"
                android:ems="5"
                android:gravity="center|left"
                android:padding="5dp"
                android:text="Date"
                android:textColor="@android:color/white"
                app:drawableTint="@android:color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtEditDate"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:ems="9"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/placeholderDateLong"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/labelEditDate"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/editTagLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTimeLayout">

            <TextView
                android:id="@+id/labelEditTag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:drawableStart="@drawable/ic_tag_base"
                android:drawableLeft="@drawable/ic_tag_base"
                android:drawablePadding="5dp"
                android:ems="5"
                android:gravity="left|center_vertical"
                android:padding="5dp"
                android:text="Tag"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                app:drawableTint="@android:color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iconEditTag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:padding="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/labelEditTag"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_tag_base" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/editDescLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editDateLayout">

            <TextView
                android:id="@+id/editDescLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:drawableStart="@drawable/ic_description"
                android:drawableLeft="@drawable/ic_description"
                android:drawablePadding="5dp"
                android:gravity="center|left"
                android:padding="5dp"
                android:text="Description"
                android:textColor="@android:color/white"
                app:drawableTint="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/txtEditDesc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:drawablePadding="5dp"
                android:gravity="top"
                android:maxLines="5"
                android:padding="5dp"
                android:text="@string/placeholderTextLong"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editDescLabel" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>